src/tests/resources/transcripts/errors/unassigned_local_variable.sif
print local x
(-- error
unused local variable "x" will always be empty
--)